website/i18n/de/docusaurus-plugin-content-docs/version-13.0/about-the-consoles/titan-mobile.md
---
id: titan-mobile
title: Titan Mobile
sidebar_label: Titan Mobile
original_id: titan-mobile
---

import Keys from '@site/src/components/key.ts';
import Video from '@site/src/components/video.tsx';

Das Titan Mobile ist ein PC-Wing, der mittels USB an einen Computer
angeschlossen wird (Windows 7 oder höher, 64 bit), auf dem die
Titan-Software läuft.

![Titan Mobile](/docs/images/Titan-Mobile.png)

\(A\) Die <strong>Playbacks</strong> (Speicherplätze, Szenenregler) dienen zum Speichern,
zur Auswahl und zur Steuerung von Bildern und Abläufen. \(B\) Die **Tasten 
zur Seitenumschaltung** dienen dabei zum Umschalten der Seiten der Szenenregler;
die jeweilige Belegung wird unten am Bildschirm angezeigt.

\(C\) Mit den <strong>Encodern</strong> werden die Geräte gesteuert; ebenso
werden etwa Zeiten und Überblendwerte eingestellt. Die jeweilige
Belegung wird unten rechts im Bildschirm angezeigt.

\(D\) Mit den Tastern der <strong>Attributauswahl</strong> werden die Attribute der Geräte
angewählt (z.B. Farbe, Gobo, Bewegung, Fokus), welche dann durch die
Drehregler gesteuert werden sollen. Die jeweils aktiven Taster werden
durch LEDs angezeigt. Der untere (rote) Taster erlaubt das 'Locaten'
(Lokalisieren) von Geräten, indem sie auf eine vordefinierte
Startposition gesetzt werden.

\(E\) Mittels der <strong>Tasten für Chaser und Cuelisten</strong> lassen sich diese
starten, stoppen und innerhalb derselben navigieren.

\(F\) Mit dem <strong>Ziffern- und Tastenfeld</strong> lassen sich Werte eingeben sowie
Einstellungen des Pultes ändern.

\(G\) Mit den blauen <strong>Funktionstasten</strong> sind verschieden Funktionen
verknüpft, etwa Speichern von Szenen, Kopieren, Speichern auf Disk.

\(H\) Die <strong>Macro- und Executortasten</strong> sind frei belegbare Tasten; darauf lassen
sich sowohl Cues als auch Makros oder Arbeitsumgebungen (Workspaces)
speichern.

\(I\) Die <strong>Fensterauswahltasten</strong> dienen zum Öffnen und Umschalten der
jeweiligen Fenster der Arbeitsumgebung.

\(J\) Die <strong>Menütasten</strong> (bezeichnet mit A -- G) dienen zur Auswahl
verschiedener Steuerungsoptionen. Im Bildschirm wird rechts die jeweilige
Funktion angezeigt, abhängig vom jeweiligen Status
des Pultes. Befehle dieser Taster sind in diesem Handbuch blau dargestellt,
z.B. <Keys.SoftKey>Edit Times</Keys.SoftKey>

## Der Bildschirm

Das System lässt sich am komfortabelsten
mit einem Touchscreen bedienen. Verwenden Sie hingegen eine Maus, so
klicken Sie mit der Maus einfach auf die betreffenden Stelle, wenn im
Handbuch ‚berühren' steht.

![Titan Mobile Screen](/docs/images/Titan-Mobile-Screen.png)

\(K\) Verschiedene <strong>Arbeitsfenster</strong> können auf dem Bildschirm angezeigt
werden; diese enthalten jeweils Buttons (Schaltflächen) zur Auswahl von
Geräten, Paletten, Gruppen, Shapes, Attributen etc. Auch der Visualiser
wird in einem solchen Fenster angezeigt.

\(L\) Die <strong>Menütasten</strong> korrespondieren mit den ‚echten' Tasten rechts auf
dem Pult; die Schaltflächen zeigen die jeweilige Belegung an, und zum
Betätigen kann man entweder auf die Schaltfläche klicken oder die
jeweilige Taste drücken.

\(M\) Links davon befindet sich der Bereich <strong>Systemanzeige</strong>; hier werden
hilfreiche Hinweise zur jeweiligen Aktion eingeblendet. Darunter werden
je nach gewähltem Fenster verschiedene <strong>kontextabhängige Schaltflächen</strong>
angezeigt.

\(N\) Darunter wiederum werden die <strong>Arbeitsumgebungen</strong> angezeigt, und mit den
Schaltflächen lässt sich schnell zwischen diesen umschalten.

\(O\) Der Bereich <strong>Rad-Belegung</strong> zeigt die aktuelle Funktion, Belegung und
die Werte der Attribut-Räder. Im <strong>Attribut-Status</strong> wird angezeigt,
welche Attribute gerade aktiv und welche modifiziert sind.

\(P\) Unten links schließlich werden die momentanen Belegungen der
&nbsp;<strong>Playbacks</strong> angezeigt.

## Titan Mobile Anschlussfeld

![Titan Mobile Connections](/docs/images/Titan-Mobile-Connections.png)
Sämtliche für das Pult erforderlichen Anschlüsse befinden sich auf der
rechten Seite. Die meisten davon sind selbsterklärend. 

\(Q\) Es gibt vier DMX-Anschlüsse sowie einen MIDI-Eingang.

\(R\) USB-Anschluss. Titan Mobiles der ersten Serie wurden noch mit 
zwei USB-Buchsen ausgeliefert, von denen aber nur die obere zu verwenden 
ist. Neuere Titan Mobiles verfügen nur noch über eine USB-Buchse. 
Normalerweise wird das Pult über diese mit Spannung versorgt. Einige 
Laptops liefern aber ggf. nicht genügend Strom auf den USB-Anschlüssen; 
in diesem Fall ist ein separates Netzteil (9 V Gleichspannung) \(S\) vorzusehen. Wenden Sie sich dazu an Avolites oder Ihren Avolites-Händler.

\(T\) Die Erdungsbuchse (unterhalb des optionalen Netzteilanschlusses)
erlaubt es, das Pult separat zu erden, um eventuelle DMX-Probleme zu
beheben.
