website/i18n/de/docusaurus-plugin-content-docs/version-15.0/about-the-consoles/titan-mobile.md
---
id: titan-mobile
title: Das Titan Mobile
sidebar_label: Das Titan Mobile
---

import Keys from '@site/src/components/key.ts';
import Video from '@site/src/components/video.tsx';

Das Titan Mobile ist ein PC-Wing, der mittels USB an einen Computer
angeschlossen wird, auf dem die Titan-Software läuft. Zu den 
Systemanforderungen siehe [Inbetriebnahme von Titan Mobile und T1/T2](../titan-basics.md#inbetriebnahme-von-titan-mobile-und-t1t2).

![Titan Mobile](/docs/images/Titan-Mobile.png)

&nbsp;<Keys.Annotation>A</Keys.Annotation> Die **Playbacks** (Speicherplätze, 
Szenenregler) dienen zum Speichern, zur Auswahl und zur Steuerung von Bildern 
und Abläufen. &nbsp;<Keys.Annotation>B</Keys.Annotation> Die **Tasten 
zur Seitenumschaltung** dienen dabei zum Umschalten der Seiten der Szenenregler;
die jeweilige Belegung wird unten am Bildschirm angezeigt.

&nbsp;<Keys.Annotation>C</Keys.Annotation> Mit den **Encodern** werden die 
Geräte gesteuert; ebenso werden etwa Zeiten und Überblendwerte eingestellt. 
Die jeweilige Belegung wird unten rechts im Bildschirm angezeigt.

&nbsp;<Keys.Annotation>D</Keys.Annotation> Mit den Tastern der **Attributauswahl** 
werden die Attribute der Geräte angewählt (z.B. Farbe, Gobo, Bewegung, Fokus), 
welche dann durch die Drehregler gesteuert werden sollen. Die jeweils aktiven 
Taster werden durch LEDs angezeigt. Der untere (rote) Taster erlaubt das 'Locaten'
(Lokalisieren) von Geräten, indem sie auf eine vordefinierte Startposition gesetzt werden.

&nbsp;<Keys.Annotation>E</Keys.Annotation> Mittels der **Tasten für Chaser und 
Cuelisten** lassen sich diese starten, stoppen und innerhalb derselben navigieren.

&nbsp;<Keys.Annotation>F</Keys.Annotation> Mit dem **Ziffern- und Tastenfeld** 
lassen sich Werte eingeben sowie Einstellungen des Pultes ändern.

&nbsp;<Keys.Annotation>G</Keys.Annotation> Mit den blauen **Funktionstasten** 
sind verschieden Funktionen verknüpft, etwa Speichern von Szenen, Kopieren, 
Speichern auf Disk.

&nbsp;<Keys.Annotation>H</Keys.Annotation> Die **Macro- und Executortasten** sind 
frei belegbare Tasten; darauf lassen sich sowohl Cues als auch Makros oder 
Arbeitsumgebungen (Workspaces) speichern.

&nbsp;<Keys.Annotation>I</Keys.Annotation> Die **Fensterauswahltasten** dienen 
zum Öffnen und Umschalten der jeweiligen Fenster der Arbeitsumgebung.

&nbsp;<Keys.Annotation>J</Keys.Annotation> Die **Menütasten** (bezeichnet mit 
A -- G) dienen zur Auswahl verschiedener Steuerungsoptionen. Im Bildschirm 
wird rechts die jeweilige Funktion angezeigt, abhängig vom jeweiligen Status
des Pultes. Befehle dieser Taster sind in diesem Handbuch blau dargestellt,
z.B. <Keys.SoftKey>Edit Times</Keys.SoftKey>

## Der Bildschirm

Das System lässt sich am komfortabelsten mit einem Touchscreen bedienen. 
Verwenden Sie hingegen eine Maus, so0 klicken Sie mit der Maus einfach auf 
die betreffenden Stelle, wenn im Handbuch ‚berühren' steht.

![Titan Mobile Screen](/docs/images/Titan-Mobile-Screen.png)

&nbsp;<Keys.Annotation>K</Keys.Annotation> Verschiedene **Arbeitsfenster** 
können auf dem Bildschirm angezeigt werden; diese enthalten jeweils Buttons 
(Schaltflächen) zur Auswahl von Geräten, Paletten, Gruppen, Shapes, Attributen etc. 
Auch der Visualiser wird in einem solchen Fenster angezeigt.

&nbsp;<Keys.Annotation>L</Keys.Annotation> Die **Menütasten** korrespondieren 
mit den ‚echten' Tasten rechts auf dem Pult; die Schaltflächen zeigen die 
jeweilige Belegung an, und zum Betätigen kann man entweder auf die Schaltfläche 
klicken oder die jeweilige Taste drücken.

&nbsp;<Keys.Annotation>M</Keys.Annotation> Links davon befindet sich der Bereich 
**Systemanzeige**; hier werden hilfreiche Hinweise zur jeweiligen Aktion 
eingeblendet. Darunter werden je nach gewähltem Fenster verschiedene 
**kontextabhängige Schaltflächen** angezeigt.

&nbsp;<Keys.Annotation>N</Keys.Annotation> Darunter wiederum werden die 
**Arbeitsumgebungen** angezeigt, und mit den Schaltflächen lässt sich schnell 
zwischen diesen umschalten.

&nbsp;<Keys.Annotation>O</Keys.Annotation> Der Bereich **Rad-Belegung** zeigt 
die aktuelle Funktion, Belegung und die Werte der Attribut-Räder. Im 
**Attribut-Status** wird angezeigt, welche Attribute gerade aktiv und welche 
modifiziert sind.

&nbsp;<Keys.Annotation>P</Keys.Annotation> Unten links schließlich werden die momentanen Belegungen der **Playbacks** angezeigt.

## Titan Mobile Anschlussfeld

![Titan Mobile Connections](/docs/images/Titan-Mobile-Connections.png)
Sämtliche für das Pult erforderlichen Anschlüsse befinden sich auf der
rechten Seite. Die meisten davon sind selbsterklärend. 

&nbsp;<Keys.Annotation>Q</Keys.Annotation> Es gibt vier DMX-Anschlüsse 
sowie einen MIDI-Eingang.

&nbsp;<Keys.Annotation>R</Keys.Annotation> USB-Anschluss. Titan Mobiles der 
ersten Serie wurden noch mit zwei USB-Buchsen ausgeliefert, von denen aber 
nur die obere zu verwenden ist. Neuere Titan Mobiles verfügen nur noch über 
eine USB-Buchse. Normalerweise wird das Pult über USB mit Spannung versorgt. 
Einige Laptops liefern aber ggf. nicht genügend Strom auf den USB-Anschlüssen; 
in diesem Fall ist ein separates Netzteil (9 V Gleichspannung) <Keys.Annotation>
S</Keys.Annotation> vorzusehen. Wenden Sie sich dazu an Avolites oder Ihren 
Avolites-Händler.

&nbsp;<Keys.Annotation>T</Keys.Annotation> Die Erdungsbuchse (unterhalb des 
optionalen Netzteilanschlusses) erlaubt es, das Pult separat zu erden, um 
eventuelle DMX-Probleme zu beheben.
